@@ -1,4 +1,6 @@
 release 1.7
+- Added methods to WadlApplicationContext which can control WADL generation in runtime.
+  See WadlResourceTest.testEnableDisableRuntime() for further details.
 - Fixed bug related to init param propagation when Application class name is specified in
   servlet-name element and servlet-class is not used at all (see sample 2.11 from user guide).
 - Fixed issue 697
